--- a/angular.json
+++ b/angular.json
@@ -89,10 +89,14 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/slick-carousel/slick/slick.css",
+              "node_modules/slick-carousel/slick/slick-theme.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.min.js" 
+              "node_modules/bootstrap/dist/js/bootstrap.min.js", 
+              "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/slick-carousel/slick/slick.min.js"
             ]
           }
         }
