--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@fullcalendar/core": "^6.1.4",
     "@fullcalendar/daygrid": "^6.1.4",
     "bootstrap": "^5.2.3",
+    "jquery": "^3.6.4",
+    "ngx-slick-carousel": "^15.0.0",
     "rxjs": "~7.8.0",
+    "slick-carousel": "^1.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
